# PythonProject_XX

./: .ci-trigger  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README-MULTI_AI_V4.md  README.md  README.txt  README_PATCH.md  _ci_poke.txt  architecture.md  bootstrap-v4-ollama.py  conftest.py  meta_state.db  obs.py  orchestrator.py  pyproject.toml  requirements-dev.txt  requirements.extra.txt  requirements.patch.txt  requirements.txt  trace_report.html  wf_on_branch.yml
.github/: CODEOWNERS
.github/workflows/: ci-observability.yml  ci.yml  zz_sanity.yml
MULTI_AI/: .env.example  .gitignore  orchestrator.py
MULTI_AI/agents/: architect.py  base.py  codegen.py  critic.py
MULTI_AI/tests/: test_api.py  (+1 more)
agents/: algo_designer.py  architect.py  base.py  codegen.py  critic.py  debugger.py  integrator.py  knowledge.py  tester.py
config/: agent_config.py
dashboard/: streamlit_app.py
feridunfc_meta_ai/: cli.py  cli_patch.txt
feridunfc_meta_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
grafana/: dashboard.json
multi_ai_v4_ollama/: ensemble.py  main.py
tests/: _ci_touch.txt  _ci_touch_ci.yml.txt  conftest.py  test_agent_contracts.py  test_ai_client.py  test_api.py  test_pipeline_smoke.py  test_planner_react.py  test_react_selfcheck_rbac.py  test_scheduler.py  test_security.py  test_tools_linter.py  test_tools_patcher.py
traces_last_18168275996/: pytest-report.xml
utils/: ai_client.py  cost_guard.py  otel_tracer.py  sandbox.py  trace_manager.py  trace_reporter.py
v0_8/: .env.example  README_UPGRADE.md  requirements.txt
(+127 files in other folders)
